namespace Assets.DM.Script.Metroidvania.Player
{
    public class PlayerAnimationParam
    {
        // Level Environment
        public const string AxisXinput = "Horizontal";

        // Animation variables
        public const string IsMoving = "isMoving";
        public const string IsOnGround = "isOnGround";
        public const string JumpTriggerName = "jump";
        public const string IsAttacking = "isAttacking";
    }
}
